[package]
name = "dmtap-naming"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "DMTAP name→key resolver (spec §3): DNS record parsing, KT-verified resolution (RFC 6962 inclusion proofs, STH signatures, leaf-hash binding, v1 multi-log quorum), and the async-join KeyPackage fetch seam — fail-closed, network-abstracted, unit-testable offline"
repository = "https://example.invalid/envoir"

[dependencies]
# Shared DMTAP core primitives — Identity/IdentityKey, the KT objects (SignedTreeHead,
# InclusionProof, ConsistencyProof, identity_leaf_hash), ContentId, Suite (spec §1, §3.5).
dmtap-core = { path = "../dmtap-core" }
# The RFC 6962 tree/node hash is BLAKE3-256 (spec §18.9.5) — the same hash the leaf-hash rule and
# content addressing use, so the resolver folds audit paths with the protocol's own hash.
blake3 = "1"
# Ergonomic fail-closed error enums, matching dmtap-core's style.
thiserror = "1"

[dev-dependencies]
