[package]
name = "dmtap-naming"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "DMTAP name→key resolver (spec §3): DNS record parsing, KT-verified resolution (RFC 6962 inclusion proofs, STH signatures, leaf-hash binding, v1 multi-log quorum), and the async-join KeyPackage fetch seam — fail-closed, network-abstracted, unit-testable offline"
repository = "https://example.invalid/envoir"

[dependencies]
# Shared DMTAP core primitives — Identity/IdentityKey, the KT objects (SignedTreeHead,
# InclusionProof, ConsistencyProof, identity_leaf_hash), ContentId, Suite (spec §1, §3.5).
dmtap-core = { path = "../dmtap-core" }
# The RFC 6962 tree/node hash is BLAKE3-256 (spec §18.9.5) — the same hash the leaf-hash rule and
# content addressing use, so the resolver folds audit paths with the protocol's own hash.
blake3 = "1"
# Ergonomic fail-closed error enums, matching dmtap-core's style.
thiserror = "1"

# --- Unicode canonicalization + UTS-39 confusables defense (spec §3.9.1, i18n hardening) ---
# `idna` is the url/servo-stack UTS-46/IDNA processor — small, pure Rust, the ecosystem standard,
# and ALREADY pinned in this workspace's Cargo.lock (it rides in under `url`). Every domain a name
# carries is canonicalized through it to the A-label (punycode) form, so `bücher.example`,
# `BÜCHER.example`, an NFD spelling, and `xn--bcher-kva.example` are ONE identity and every DNS
# qname is built from A-labels only (never a raw Unicode label on the wire).
idna = "1"
# NFC for the LOCAL part (UTS-46 governs only the domain side of the `@`): `unicode-normalization`
# is the unicode-rs standard — pure Rust, table-embedding (no build-time fetch, no runtime data
# file), snapshot pinned in Cargo.lock. Also supplies the NFD pass under the UTS-39 skeleton.
unicode-normalization = "0.1"
# The Unicode `Script` property for the UTS-39 single-script-per-label rejection. `icu_properties`
# is ICU4X's property crate and is ALREADY in the build graph (idna 1.x does its UTS-46 mapping
# through ICU4X via `idna_adapter`), so taking it directly adds zero new transitive code; its
# default `compiled_data` feature embeds the property tables the same way gateway's `psl` embeds
# the Public Suffix List — no fetch, no data file, snapshot pinned in Cargo.lock.
icu_properties = "2"

[dev-dependencies]
