[package]
name = "dmtap-sync-wasm"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "The browser/JS binding for the DMTAP Sync substrate (substrate/SYNC.md, substrate/BINDINGS.md §3): a wasm-bindgen wrapper exposing dmtap-sync's signed CRDT operation algebra, HLC, observable-state snapshots, version vectors and range-Merkle reconciliation to JavaScript — the SAME compiled core, never a re-implementation. No private key crosses the boundary: op and snapshot signing are detached (preimage out, signature in)."
repository = "https://example.invalid/envoir"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The algebra. Everything this crate returns is produced by these two crates; the binding marshals
# arguments and never re-implements a merge, a hash or an encoding (BINDINGS.md §4).
dmtap-core = { path = "../dmtap-core" }
dmtap-sync = { path = "../dmtap-sync" }
# The JS boundary + the structured argument/result encoding. `serde_json` is already a workspace
# dependency (conformance-runner), so this adds no new third-party crate to the tree.
serde_json = "1"
wasm-bindgen = "0.2"

# --- wasm32 RNG plumbing ------------------------------------------------------------------------
# `dmtap-core` pulls three `getrandom` majors transitively (ed25519-dalek / x-wing / ml-dsa). None
# of them compiles for `wasm32-unknown-unknown` without being told where entropy comes from, so the
# binding crate names them explicitly and points them at the host's `crypto.getRandomValues`. This
# crate never generates a key itself — signing is detached — but those paths must still link.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
